Logos del login cambiados

--- a/Angular/package.json
+++ b/Angular/package.json
@@ -26,7 +26,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "angular-custom-modal": "^1.2.0",
-    "angularx-social-login": "^3.2.2",
+    "angularx-social-login": "^3.3.1",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
@@ -35,12 +35,12 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.1",
+    "@angular-devkit/build-angular": "^0.1002.0",
     "@angular/cli": "~10.1.1",
     "@angular/compiler-cli": "~10.1.1",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
