--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
+    "@angular/google-maps": "^11.0.0",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@types/googlemaps": "^3.39.13",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.10.2",
