--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0"
   },
