--- a/Angular/package.json
+++ b/Angular/package.json
@@ -28,6 +28,7 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "angular-custom-modal": "^1.2.0",
     "angularx-social-login": "^3.3.1",
+    "bootbox": "^5.5.1",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
